<resources>
    <string name="app_name">YunZhi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--分类模块控件名称-->
    <string name="class_all">全部课程</string>
    <string name="class_comprehensive">综合</string>
    <string name="class_drawer_head_text">全部课程</string>

    <string name="class_new">最新</string>
    <string name="class_hot">最热</string>
    <string name="class_finish">已完成</string>
    <string name="class_not_finish">未完成</string>
    <string name="class_not_start">待开始</string>
    <string name="class_range">排序</string>
    <string name="class_state">状态</string>

    <string name="good_boy">好评</string>

    <!--课程详情模块-->
    <string name="details_jianjie">课程简介</string>
    <string name="details_show_all">显示详情</string>
    <string name="details_hide">隐藏</string>
    <string name="details_enter">进入课程</string>

    <string name="class_examine">评分标准</string>

    <!-- QR_Code -->
    <string name="button_ok">OK</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the
        device.
    </string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="scan_text">放入框中即可进行二维码扫描</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="preferences_vibrate">preferences_vibrate</string>
    <string name="preferences_play_beep">preferences_play_beep</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_decode_1D_title">1D barcodes</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
    <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
    <string name="preferences_supplemental_title">Retrieve more info</string>
    <string name="preferences_vibrate_title">Vibrate</string>

    <string name="preview_msg">&#160;preview pages available,click Download for more.</string>

    <string name="please_wait">加载中...</string>



    <string-array name="titles">
        <item>热门推荐</item>
        <item>最强男神</item>
        <item>实力老师</item>
        <item>最佳推荐</item>
        <item>新秀老师</item>
        <item>考研课程详解</item>
        <item>清华推荐课程</item>
        <item>北大推荐课程</item>
    </string-array>

    <string-array name="introduce">
        <item>网络协议是学习计算机网络的核心和关键。
            网络协议实践是...
        </item>
        <item>
            数据结构是计算机存储、组织数据的方式。数据结构是...
        </item>
        <item>
            本课程围绕算法设计技术组织素材，对每种算法技术选择了多个典型
            范例进行分析。算法的正确性、复杂性进行恰当的分析...
        </item>
        <item>
           风化岁月，还有多少时间可以留给你呢，点击，查看详情。。
        </item>

        <item>
           一世风华还需埋头苦干。。
        </item>

        <item>
           离散数学(Discrete mathematics)是研究离散量的结构及其相互关系的数学学科，
            是现代数学的一个重要分支。离散的含义是指不同的连接在一起的元素
        </item>
    </string-array>

    <string-array name="crouseId">
        <item>
            01001
        </item>
        <item>
            01003
        </item>
        <item>
            03003
        </item>
        <item>
            03002
        </item>
        <item>
            02003
        </item>
    </string-array>

    <string-array name="teacherId">
        <item>
            2
        </item>
        <item>
           1
        </item>
        <item>
            7
        </item>
        <item>
            8
        </item>
        <item>
            6
        </item>
    </string-array>

</resources>
