<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/len_8"
    android:layout_marginRight="@dimen/len_8"
    android:background="@drawable/class_comprehsv_style"
    android:id="@+id/hidden_comprhsv">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/len_172"
        android:id="@+id/lv_comprehensive"
        android:padding="@dimen/len_20"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/len_20"
            android:layout_marginLeft="@dimen/len_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/len_40"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/tv_class_range"
                android:text="@string/class_range"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rg_range"
                android:padding="@dimen/len_6"
                android:layout_marginLeft="@dimen/len_20"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:padding="@dimen/len_4"
                    android:id="@+id/rb_comprehv"
                    android:checked="true"
                    android:button="@null"
                    android:background="@drawable/radio_button_bg"
                    android:text="@string/class_comprehensive"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:padding="@dimen/len_4"
                    android:layout_marginLeft="@dimen/len_36"
                    android:id="@+id/rb_new"
                    android:button="@null"
                    android:background="@drawable/radio_button_bg"
                    android:text="@string/class_new"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:padding="@dimen/len_4"
                    android:layout_marginLeft="@dimen/len_36"
                    android:id="@+id/rb_hot"
                    android:button="@null"
                    android:background="@drawable/radio_button_bg"
                    android:text="@string/class_hot"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/len_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/len_40"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/tv_class_state"
                android:text="@string/class_state"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/len_6"
                android:id="@+id/rg_state"
                android:layout_below="@+id/rg_range"
                android:layout_marginLeft="@dimen/len_20"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:padding="@dimen/len_4"
                    android:id="@+id/rb_all"
                    android:button="@null"
                    android:checked="true"
                    android:background="@drawable/radio_button_bg"
                    android:text="@string/class_all"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:padding="@dimen/len_4"
                    android:layout_marginLeft="@dimen/len_20"
                    android:id="@+id/rb_not_finish"
                    android:button="@null"
                    android:background="@drawable/radio_button_bg"
                    android:text="@string/class_not_finish"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:padding="@dimen/len_4"
                    android:layout_marginLeft="@dimen/len_20"
                    android:id="@+id/rb_finish"
                    android:button="@null"
                    android:background="@drawable/radio_button_bg"
                    android:text="@string/class_finish"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:padding="@dimen/len_4"
                    android:layout_marginLeft="@dimen/len_20"
                    android:id="@+id/rb_not_start"
                    android:button="@null"
                    android:background="@drawable/radio_button_bg"
                    android:text="@string/class_not_start"/>
            </RadioGroup>


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
